Fix: resolve Issue #5 messages which overflow `#messages-container` cannot be viewed despite the container element having the property `overflow: scroll` Wrap `#messages-container` and `.messages-end-text` in `<section>` `#messages-board-container` which has properties `display: flex` and `flex-direction: column-reverse` Move `.messages-end-text` below `#messages-container` for accessibility Update query selector for `container` in `script.js`

--- a/public/styles.css
+++ b/public/styles.css
@@ -132,10 +132,9 @@ body {
 	z-index: 1;
 }
 
-#messages-container {
+#message-board-container {
 	display: flex;
-	flex-direction: column;
-	justify-content: flex-end;
+	flex-direction: column-reverse;
 	gap: 0.5rem;
 
 	margin-bottom: 1rem;
@@ -155,6 +154,7 @@ body {
 }
 
 .message-container {
+	margin-top: 0.5rem;
 	border-left: solid 2px var(--cl-midground);
 	padding: 0.5rem;
 
